# roman_numerals

./: README.md
src/: CMakeInstallation.cmake  CMakeLists.txt
src/app/: CMakeLists.txt  roman_numerals_version.h.in
src/app/src/: main.cpp
src/cmake/: Boost.cmake  BoostDownload.cmake  CodeCoverage.cmake  FindCatch.cmake  clang.cmake
src/decoder/: CMakeLists.txt
src/decoder/include/roman_decoder/: decode.h
src/decoder/src/: decode.cpp
src/decoder/tests/: CMakeLists.txt  coverage.ignore
src/decoder/tests/src/: decoder_test.cpp  main.cpp
src/encoder/: CMakeLists.txt
src/encoder/include/roman_encoder/: encode.h
src/encoder/src/: encode.cpp
src/encoder/tests/: CMakeLists.txt  coverage.ignore
src/encoder/tests/src/: encoder_test.cpp
src/scripts/: config_toolset.bat
src/scripts/test/: gcovr
src/validator/: CMakeLists.txt
src/validator/include/roman_validator/: validator.h
src/validator/src/: roman_numeral_validator.cpp  validator.cpp
src/validator/tests/: CMakeLists.txt
src/validator/tests/src/: validator_test.cpp
